kustomize/alb-nginx/base/alb-nginx-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: alb-nginx
spec: {}
status: {}
