kustomize/alb-nginx/base/alb-nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: alb-nginx
  name: alb-nginx
  namespace: alb-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alb-nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: alb-nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
