kustomize/alb-nginx/base/alb-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-nginx-svc
  namespace: alb-nginx
spec:
  type: NodePort
  selector:
    app: alb-nginx
  ports:
    - port: 80
      targetPort: 80
